@@ -53,6 +53,7 @@
     "ember-disable-proxy-controllers": "1.0.1",
     "ember-export-application-global": "1.0.5",
     "ember-resolver": "2.0.3",
+    "ember-truth-helpers": "1.2.0",
     "phantomjs": "1.9.19"
   },
   "dependencies": {
