@@ -18,6 +18,8 @@
 
 import { moduleFor, test } from 'ember-qunit';
 
+import Ember from 'ember';
+
 moduleFor('route:app/configs', 'Unit | Route | app/configs', {
   // Specify the other units that are required for this test.
   // needs: ['controller:foo']
@@ -43,4 +45,53 @@ test('setupController test', function(assert) {
   });
 
   route.setupController({}, {});
+});
+
+test('load test', function(assert) {
+  let entityID = "123",
+      testOptions = {},
+      testData = {},
+      route = this.subject({
+        modelFor: function (type) {
+          assert.equal(type, "app");
+          return Ember.Object.create({
+            entityID: entityID
+          });
+        }
+      });
+  route.loader = {
+    queryRecord: function (type, id, options) {
+      assert.equal(type, "app");
+      assert.equal(id, "tez_123");
+      assert.equal(options, testOptions);
+      return Ember.RSVP.resolve(testData);
+    }
+  };
+
+  route.load(null, null, testOptions).then(function (data) {
+    assert.equal(data, testData);
+  });
+
+  assert.expect(1 + 3 + 1);
+});
+
+test('load failure test', function(assert) {
+  let route = this.subject({
+        modelFor: function (type) {
+          assert.equal(type, "app");
+          return Ember.Object.create();
+        },
+      });
+  route.loader = {
+    queryRecord: function () {
+      return Ember.RSVP.reject(new Error());
+    }
+  };
+
+  route.load(null, null, {}).then(function (data) {
+    assert.ok(Array.isArray(data));
+    assert.equal(data.length, 0);
+  });
+
+  assert.expect(1 + 2);
 });
