@@ -18,6 +18,8 @@
 
 import { moduleFor, test } from 'ember-qunit';
 
+import Ember from 'ember';
+
 moduleFor('route:app/dags', 'Unit | Route | app/dags', {
   // Specify the other units that are required for this test.
   // needs: ['controller:foo']
@@ -43,4 +45,34 @@ test('setupController test', function(assert) {
   });
 
   route.setupController({}, {});
+});
+
+test('Test load', function(assert) {
+  let testID = "123",
+      testOptions = {},
+      testData = {},
+      route = this.subject({
+        modelFor: function (type) {
+          assert.equal(type, "app");
+          return Ember.Object.create({
+            entityID: testID
+          });
+        },
+        get: function () {
+          return {
+            query: function (type, query, options) {
+              assert.equal(type, "dag");
+              assert.equal(query.appID, testID);
+              assert.equal(options, testOptions);
+              return testData;
+            }
+          };
+        }
+      }),
+      data;
+
+  assert.expect(1 + 3 + 1);
+
+  data = route.load(null, null, testOptions);
+  assert.equal(data, testData);
 });
