@@ -18,6 +18,8 @@
 
 import { moduleFor, test } from 'ember-qunit';
 
+import Ember from 'ember';
+
 moduleFor('route:app/index', 'Unit | Route | app/index', {
   // Specify the other units that are required for this test.
   // needs: ['controller:foo']
@@ -43,4 +45,49 @@ test('setupController test', function(assert) {
   });
 
   route.setupController({}, {});
+});
+
+test('Test load', function(assert) {
+  let testID = "123",
+      testOptions = {},
+      testErr = {},
+      route = this.subject({
+        modelFor: function (type) {
+          assert.equal(type, "app");
+          return Ember.Object.create({
+            entityID: testID
+          });
+        },
+        get: function () {
+          return { // loader
+            queryRecord: function (type, id, options) {
+              assert.equal(type, "app");
+              assert.equal(id, "tez_123");
+              assert.equal(options, testOptions);
+              return {
+                catch: function (callback) {
+                  return callback(testErr);
+                }
+              };
+            },
+            query: function (type, query, options) {
+              assert.equal(type, "dag");
+              assert.equal(query.appID, testID);
+              assert.equal(query.limit, 1);
+              assert.equal(options, testOptions);
+              return {
+                then: function (callback) {
+                  return callback([]);
+                }
+              };
+            }
+          };
+        }
+      });
+
+  assert.expect(1 + 3 + 4 + 1);
+
+  assert.throws(function () {
+    route.load(null, null, testOptions);
+  });
 });
